tests/ui/enum.rs
#[derive(pg_mapper::TryFromRow)]
enum MyEnum {}

fn main() {}
